# Inferno_Fusion

./: .gitignore  Cargo.toml  README.md  index.html
assets/materials/: default.mtl  skull.mtl
src/components/: ambient.rs  buffer_data.rs  camera.rs  clear_color.rs  coloring.rs  diffuse.rs  dimensions.rs  directional_light.rs  file_content.rs  file_to_load.rs  geometry.rs  geometry_group.rs  image.rs  image_to_load.rs  inverse_world_transform.rs  local_transform.rs  material.rs  mod.rs  models_to_load.rs  name.rs  normals.rs  point_light.rs  projection_transform.rs  scene_parent.rs  shininess.rs  specular.rs  tex_coords.rs  texture.rs  viewport.rs  webgl_buffer.rs  webgl_texture.rs  world_transform.rs
src/resources/: active_config.rs  mod.rs
